# valaDevelop

./: .gitignore  LICENSE  README.md  files.sh  gdk-sharp.dll.config  gtk-sharp.dll.config  meson.build  pango-sharp.dll.config  valaDevelop  valaDevelop.desktop  valaDevelop.exe.config  valaDevelop.xml  valaDevelop_0.1-1_amd64.deb  valaDevelop_libvala-0.42  x-vsln.xml
Ubuntu 18.10 x86_64/: atk-sharp.dll.config  gio-sharp.dll.config  gtk-dotnet.dll.config
data/: valaDevelop.appdata.xml  valaDevelop.desktop
src/: CodeAnalyse.c  IOptionWidget.c  SymbolResolver.c  application_window.c  breakpoint_bookmarks.c  breakpoint_hit.c  completion_provider.c  context_menu.c  debugger.c  debugger_symbols.c  globals.c  import_options.c  item_buildtype.c  item_options.c  item_type.c  main.c  main_paned.c  new_folder.c  new_solution_file.c  overview_tree_columns.c  overview_tree_store.c  package_options_dialog.c  project_options.c  project_options_dialog.c  readme.md  rename_folder_dialog.c  replace_dialog.c  reporter.c  resource_create_file_dialog.c  resources.c  search_and_replace.c  search_dialog.c  search_replace_dialog.c  solution_create_dialog.c  solution_options.c  source_create_file_dialog.c  source_gutter_renderer_breakpoint.c  source_gutter_renderer_folding.c  stats.c  status_list.c  (+6 more)
